flux/services/vaultwarden/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-api
  namespace: vaultwarden
  labels:
    app: vaultwarden-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: vaultwarden-api
